Bug 15580 - Packet marshalling push support missing for CTDB_CONTROL_TCP_CLIENT_DISCONNECTED and CTDB_CONTROL_TCP_CLIENT_PASSED
Summary: Packet marshalling push support missing for CTDB_CONTROL_TCP_CLIENT_DISCONNEC...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: CTDB (show other bugs)
Version: 4.18.10
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-10 01:38 UTC by Martin Schwenke
Modified: 2024-04-08 07:33 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.20, 4.19, 4.18 (3.95 KB, patch)
2024-02-19 23:12 UTC, Martin Schwenke
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Schwenke 2024-02-10 01:38:50 UTC
While adding tests for a new control I noticed that packet marshalling push support is missing for the recently added CTDB_CONTROL_TCP_CLIENT_DISCONNECTED and CTDB_CONTROL_TCP_CLIENT_PASSED controls.

This wouldn't have been noticed because smbd uses its own code to marshal packets for these controls.

Sorry, I missed this in review.
Comment 1 Martin Schwenke 2024-02-10 01:40:24 UTC
The new controls were in master in time for 4.20.0, but have been backported to fix a bug in 4.18.10 and 4.19.4.
Comment 2 Samba QA Contact 2024-02-19 10:22:04 UTC
This bug was referenced in samba master:

dd9b11acbc4fbde1941719968aeb463b853b0ffb
Comment 3 Martin Schwenke 2024-02-19 23:12:50 UTC
Created attachment 18254 [details]
Patch for 4.20, 4.19, 4.18

Cherry-picks cleanly into v4-20-test.  Compiled and ran relevant protocol test, which passed. Applied to both v4-19-test and v4-18-test, repeated test.
Comment 4 Jule Anger 2024-02-20 11:45:55 UTC
Pushed to autobuild-v4-{20,19,18}-test.
Comment 5 Samba QA Contact 2024-02-20 12:57:05 UTC
This bug was referenced in samba v4-18-test:

081a6d5fc1df36a2d57dae6ecff8664396fac363
Comment 6 Samba QA Contact 2024-02-20 13:47:03 UTC
This bug was referenced in samba v4-20-test:

7107b233346f8540384a39b50c4f01ce3f5d2dc3
Comment 7 Samba QA Contact 2024-02-26 10:00:20 UTC
This bug was referenced in samba v4-19-test:

eebe6d8c890bb6a6cc35657e38ddde0319c1f4a6
Comment 8 Jule Anger 2024-02-26 11:32:29 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2024-02-26 11:47:26 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.0rc3):

7107b233346f8540384a39b50c4f01ce3f5d2dc3
Comment 10 Samba QA Contact 2024-03-13 15:55:02 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.11):

081a6d5fc1df36a2d57dae6ecff8664396fac363
Comment 11 Michael Tokarev 2024-03-28 07:37:31 UTC
How relevant this isssue is for, say, 4.18 - with 4.18.11 having just this single change?  From the description it feels like this code is actually unused, at least by current smbd, so the whole thing seems to be a no-op.
Comment 12 Martin Schwenke 2024-03-28 08:40:21 UTC
(In reply to Michael Tokarev from comment #11)

Hi Michael,

Correct, no need to release a new Debian version just for this.  I wanted to make sure we backported this because having the code missing means that related backports would be more difficult.
Comment 13 Samba QA Contact 2024-04-08 07:33:57 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.6):

eebe6d8c890bb6a6cc35657e38ddde0319c1f4a6